--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,7 +2,6 @@
   font-family: 'Figtree', Arial, Helvetica, sans-serif;
   font-size: 16px;
   overflow-x: hidden;
-  /* max-width: 100%; */
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -373,7 +372,6 @@
   position: absolute;
   top: 1%;
   left: 91%;
-  width: 20%;
   z-index: 2;
 }
 
@@ -463,6 +461,7 @@
 
 .footer_logo img {
   height: 2.5rem;
+  width: auto;
 }
 
 .footer_socialMedia {
@@ -628,7 +627,7 @@
     padding-left: 3rem;
     padding-right: 3rem;
   }
-} 
+}
 
 @media only screen and (min-width: 1024px) {
 
@@ -911,4 +910,3 @@
     margin-bottom: 0.5rem;
   }
 }
-
