--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -325,7 +325,6 @@
   font-size: 1.25rem;
   font-weight: bold;
   line-height: 30px;
-  letter-spacing: 0.4px;
   color: var(--textColorLight);
 }
 
@@ -438,19 +437,12 @@
 
 .teamLead_col {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 .teamLead_col div {
-  height: 3.5rem;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
-}
-
-.teamLead_col img {
-  max-width: 100%;
-  max-height: auto;
 }
 
 .footer {
@@ -556,11 +548,33 @@
     margin-bottom: 3rem;
   }
 
+  .teamLead {
+    max-width: 27rem;
+  }
+
   .teamLead_col {
-    display: flex;
     flex-direction: column;
-    flex: 1 1 calc(25% - 1rem);
-    max-width: 11rem;
+    flex: 1 1 calc(33.33% - 1rem);
+    row-gap: 2rem;
+  }
+
+  .teamLead_col div {
+    height: 2rem;
+  }
+
+  .teamLead_col img {
+    max-width: 100%; 
+    height: auto; 
+  }
+
+  .firstAidLogo {
+    padding-bottom: 8px;
+  }
+
+  .olxLogo,
+  .trinetixLogo ,
+  .adjustLogo {
+    padding-bottom: 4px;
   }
 
   .btn_doer {
@@ -738,6 +752,7 @@
     text-align: left;
     z-index: 3;
   }
+
   .intro_colText {
     flex: 1 1;
     max-width: 50%;
@@ -812,6 +827,7 @@
 
   .writer_about {
     padding-bottom: 1.5rem;
+    max-width: 21rem;
   }
 
   .writer_cta {
@@ -825,20 +841,55 @@
     align-items: flex-start;
   }
 
-  .doer_col,
-  .teamLead {
+  .doer_col {
     flex: 1 1 50%;
   }
 
+  .teamLead {
+    flex: 1 1 50%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 3rem;
+  }
+  
   .teamLead_col {
-    flex: 1 1 calc(33.33% - 1rem);
-    align-items: baseline;
+    flex: 1;
+    flex-direction: column;
+    max-width: calc(33.33% - 2rem);
+    align-items: flex-start;
+    gap: 3rem;
   }
 
-  .teamLead_col div {
-    display: flex;
-    /* height: auto; */
-    /* margin-bottom: 2rem; */
+  .teamLead_col img {
+    max-width: 100%;
+    height: auto;
+  }
+  .attolsLogo {
+    padding-top: 2px;
+  }
+
+  .adjustLogo {
+    padding-top: 2px;
+  }
+
+  .macpawLogo {
+    padding-top: 4px;
+  }
+
+  .firstAidLogo {
+    padding-top: 2px;
+  }
+
+  .prarmyLogo {
+    padding-top: 4px;
+  }
+
+  .doer_col h2 {
+    max-width: 24rem;
+  }
+
+  .teacher_introduction {
+    max-width: 26rem;
   }
 
   .footer {
@@ -887,7 +938,7 @@
   .component {
     max-width: 1116px;
     margin: 0 auto;
-    padding: 3rem 7rem ;
+    padding: 3rem 7rem;
   }
 
   .intro {
