--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -81,7 +81,7 @@
 
 .introImg_text {
   position: absolute;
-  bottom: -7%;
+  /* bottom: -7%; */
   left: 0%;
   color: var(--title);
   z-index: 3;
@@ -173,38 +173,41 @@
   flex-wrap: nowrap;
 }
 
-.cta_btn {
+.btn {
   background-color: var(--btnColor);
   color: var(--textBtnColor);
-  border-radius: 24px;
-  padding: 1rem;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
-  text-decoration: none;
+  cursor: pointer;
+  padding: 1rem;
   font-size: 0.875rem;
   font-weight: bold;
   line-height: 100%;
-  letter-spacing: 0.56px;
   transition: transform 0.2s, background-color 0.2s;
-  width: 9.5rem;
-  height: 3.125rem;
+  letter-spacing: 0.56px;
 }
 
-.cta_btn:hover {
+.btn:hover {
   background-color: var(--btnColorHover);
 }
 
-.cta_btn:active {
+.btn:active {
   background-color: var(--btnColorClick);
 }
 
-.cta_btn a {
-  text-decoration: none;
-  display: flex;
+.btn a {
+  display: inline-flex;
   align-items: center;
   gap: 1rem;
   color: inherit;
+  text-decoration: none;
+}
+
+.cta_btn {
+  border-radius: 24px;
+  width: 9.5rem;
+  height: 3.125rem;
 }
 
 .cta_btn span {
@@ -383,38 +386,10 @@
 }
 
 .btn_book {
-  display: inline-flex;
-  align-items: center;
   align-self: flex-start;
-  justify-content: center;
-  cursor: pointer;
-  padding: 1rem;
-  background-color: var(--btnColor);
-  color: var(--textBtnColor);
   border-radius: 100px;
-  font-size: 0.875rem;
-  font-weight: bold;
-  line-height: 100%;
-  letter-spacing: 0.64px;
-  transition: transform 0.2s, background-color 0.2s;
   width: auto;
   max-width: max-content;
-}
-
-.btn_book:hover {
-  background-color: var(--btnColorHover);
-}
-
-.btn_book:active {
-  background-color: var(--btnColorClick);
-}
-
-.btn_book a {
-  display: inline-flex;
-  align-items: center;
-  gap: 1rem;
-  color: inherit;
-  text-decoration: none;
 }
 
 .btn_book span {
@@ -500,6 +475,10 @@
     margin-bottom: 4rem;
   }
 
+  .introImg_text {
+    bottom: -7%;
+  }
+
   .vadym_about {
     flex-direction: column;
     padding: 1.5rem 0 0;
@@ -563,8 +542,8 @@
   }
 
   .teamLead_col img {
-    max-width: 100%; 
-    height: auto; 
+    max-width: 100%;
+    height: auto;
   }
 
   .firstAidLogo {
@@ -572,7 +551,7 @@
   }
 
   .olxLogo,
-  .trinetixLogo ,
+  .trinetixLogo,
   .adjustLogo {
     padding-bottom: 4px;
   }
@@ -748,7 +727,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    transform: translateY(78%);
+    transform: translateY(350%);
     text-align: left;
     z-index: 3;
   }
@@ -851,7 +830,7 @@
     flex-wrap: wrap;
     gap: 3rem;
   }
-  
+
   .teamLead_col {
     flex: 1;
     flex-direction: column;
